# packetIO

./: CMakeLists.txt  README.md
config/: example_config.cfg
example/: CMakeLists.txt  client.c  main.c  server.c
lib/: CMakeLists.txt
lib/include/: connection.h  load_config.h  log.h  nat_punch.h  packet.h  sock.h  sock_cmd.h  sock_pkt_txrx.h  time_stamp.h
lib/src/: .load_config.c.swp  connection.c  load_config.c  log.c  nat_punch.c  packet.c  sock.c  sock_cmd.c  sock_pkt_txrx.c  time_stamp.c
